--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -83,7 +83,7 @@
                             <span class="header__menu_item_subtitle">Самые низкие цены</span>
                         </span>
                     </a>
-                    <a href="index.html" class="header__menu_item active">
+                    <a href="index.html" class="header__menu_item ">
                         <span class="header__menu_item_svg">
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
                                 <g clip-path="url(#clip0_905_28938)">
@@ -102,7 +102,7 @@
                             <span class="header__menu_item_subtitle">Самые низкий процент</span>
                         </span>
                     </a>
-                    <a href="index.html" class="header__menu_item active">
+                    <a href="index.html" class="header__menu_item ">
                         <span class="header__menu_item_svg">
                             <svg xmlns="http://www.w3.org/2000/svg" width="31" height="31" viewBox="0 0 31 31" fill="none">
                                 <g clip-path="url(#clip0_905_28952)">
@@ -121,7 +121,7 @@
                             <span class="header__menu_item_subtitle">Пополняй мобильные игры</span>
                         </span>
                     </a>
-                    <a href="index.html" class="header__menu_item active">
+                    <a href="index.html" class="header__menu_item ">
                         <span class="header__menu_item_svg">
                             <svg xmlns="http://www.w3.org/2000/svg" width="31" height="31" viewBox="0 0 31 31" fill="none">
                                 <g clip-path="url(#clip0_905_28966)">
@@ -228,9 +228,9 @@
                         <img src="assets/images/icons/bag-2.svg" alt="">
                     </a>
                 </div>
-                <button class="header__actions_admin _active">
+                <button class="header__actions_admin">
                     <img src="assets/images/home-new/admin.png" alt="">
-                    <div class="header__actions_admin_drop _active">
+                    <div class="header__actions_admin_drop">
                         <a class="header__actions_admin_item" href="#">
                             <span class="header__actions_admin_svg">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
