--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -4,6 +4,7 @@
 
     &__block {
         display: flex;
+        justify-content: space-between;
         gap: 20px;
         margin-top: 25px;
     }
