--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -260,9 +260,10 @@
                 color: #6D675B;
             }
 
-            &:hover {
+            &:hover,
+            &.active {
                 border-bottom-color: $orange;
-                background: linear-gradient(0deg, #1C1B19, #3C3832);
+                background: linear-gradient(0deg, rgba(28, 27, 25, 1), rgba(60, 56, 50, 0.5));
 
                 .svg-active {
                     fill: white;
@@ -281,35 +282,6 @@
                 width: 100%;
             }
 
-            /* &::after {
-                content: "";
-                width: 43px;
-                height: 2px;
-                position: absolute;
-                bottom: 0;
-                left: 50%;
-                transform: translateX(-50%);
-                border-radius: 2px;
-                background-color: transparent;
-                transition: 300ms ease;
-            } */
-
-            /* &:hover::after,
-            &.active::after {
-                background-color: $orange;
-
-                @include mobile {
-                    background-color: transparent;
-                }
-            } */
-
-            &.active {
-                color: white;
-
-                @include mobile {
-                    background: linear-gradient(270deg, rgba(79, 79, 79, 0.35) 0%, rgba(72, 60, 54, 0.35) 31.28%, rgba(70, 66, 63, 0.35) 48.78%, rgba(72, 60, 54, 0.35) 70.71%, rgba(79, 79, 79, 0.35) 100%);
-                }
-            }
 
             @include mobile {
                 padding: 25px 0;
@@ -514,7 +486,7 @@
                 &._exit {
                     border-radius: 12px;
                     background: #42312A;
-                    padding: 10px;
+                    padding: 8px;
 
                     &:hover {
                         background: $orange;
