--- a/src/assets/scss/pages/_basket.scss
+++ b/src/assets/scss/pages/_basket.scss
@@ -55,13 +55,200 @@
         }
     }
 
-    &__basket {}
+    &__block {
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+        margin-top: 20px;
+    }
 
-    &__basket {}
+    &__items {
+        width: 100%;
+        max-width: 820px;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
 
-    &__basket {}
+    &__card {
+        border-radius: 16px;
+        border: 1px solid rgba(32, 25, 22, 0.00);
+        background: linear-gradient(180deg, rgba(32, 28, 26, 0.82) 0%, rgba(45, 40, 36, 0.82) 100%);
+        backdrop-filter: blur(11.300000190734863px);
+        padding: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 10px;
 
-    &__basket {}
+        &_img {
+            width: 100%;
+            max-width: 184px;
+            display: flex;
 
-    &__basket {}
+            &_item {
+                object-fit: cover;
+                border-radius: 10px;
+                width: 184px;
+                height: 108px;
+            }
+        }
+
+        &_content {
+            width: 100%;
+            display: flex;
+            gap: 10px;
+        }
+
+        &_info {
+            width: 100%;
+            max-width: 400px;
+        }
+
+        &_title {
+            font-size: 24px;
+            font-weight: 700;
+        }
+
+        &_subtitle {
+            font-size: 12px;
+            font-weight: 400;
+            color: $text-dark;
+            line-height: 1;
+        }
+
+        &_tags {
+            display: flex;
+            align-items: center;
+            gap: 30px;
+            flex-wrap: wrap;
+            margin-top: 18px;
+        }
+
+        &_tag {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            font-size: 12px;
+
+            &_name {
+                color: $text-dark;
+                font-weight: 400;
+            }
+
+            &_item {
+                font-weight: 700;
+            }
+        }
+
+        &_actions {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            justify-content: space-between;
+            gap: 10px;
+        }
+
+        &_action {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        &_like {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 26px;
+            height: 26px;
+            border-radius: 50%;
+            background: #0C0E0C;
+            padding-top: 2px;
+            border: 1px solid #21201D;
+            box-shadow: 0px 2px 10.6px -3px rgba(0, 0, 0, 0.25);
+        }
+
+        &_more {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            border-radius: 50px;
+            border: 1px solid #21201D;
+            background: #0C0E0C;
+            box-shadow: 0px 2px 10.6px -3px rgba(0, 0, 0, 0.25);
+        }
+
+        &_delete {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 28px;
+            height: 24px;
+            border-radius: 50px;
+            background: #1B1D1B;
+            padding-top: 2px;
+            border: 1px solid #0C0E0C;
+        }
+
+        &_add {
+            display: flex;
+            align-items: center;
+            gap: 1px;
+            background: #141614;
+            border: 1px solid #21201D;
+            border-radius: 50px;
+            margin: -1px;
+        }
+
+        &_minus,
+        &_plus {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #1B1D1B;
+            border-radius: 50px;
+            width: 28px;
+            height: 24px;
+        }
+
+        &_value {
+            width: 28px;
+            line-height: 1;
+            font-size: 15px;
+            color: $orange;
+            text-align: center;
+        }
+
+        &_price {
+            display: flex;
+            align-items: flex-end;
+            gap: 6px;
+            line-height: 1;
+
+            &_old {
+                color: #EB5050;
+                font-size: 10px;
+                font-weight: 500;
+            }
+
+            &_new {
+                font-style: italic;
+                font-weight: 700;
+                font-size: 16px;
+                color: white;
+
+                span {
+                    position: relative;
+                    top: -5px;
+                    font-weight: 500;
+                    font-size: 14px;
+                }
+            }
+        }
+
+    }
+
+    &__info {}
+
+    &__price {}
 }
