--- a/src/assets/scss/pages/_basket.scss
+++ b/src/assets/scss/pages/_basket.scss
@@ -248,7 +248,15 @@
 
     }
 
-    &__info {}
+    &__info {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+    }
 
-    &__price {}
+    &__price {
+        border-radius: 10px;
+        border-bottom: 1px solid #262724;
+        background: linear-gradient(90deg, rgba(255, 108, 61, 0.20) 0%, rgba(0, 0, 0, 0.00) 21.96%), #1A1917;
+    }
 }
