--- a/src/assets/scss/pages/_basket.scss
+++ b/src/assets/scss/pages/_basket.scss
@@ -64,7 +64,7 @@
 
     &__items {
         width: 100%;
-        max-width: 820px;
+        max-width: 830px;
         display: flex;
         flex-direction: column;
         gap: 15px;
@@ -386,14 +386,68 @@
     }
 
     &__info {
+        width: 100%;
+        max-width: 400px;
         display: flex;
         flex-direction: column;
         gap: 30px;
     }
 
     &__price {
-        border-radius: 10px;
-        border-bottom: 1px solid #262724;
-        background: linear-gradient(90deg, rgba(255, 108, 61, 0.20) 0%, rgba(0, 0, 0, 0.00) 21.96%), #1A1917;
+        width: 100%;
+        padding: 20px;
+
+        /* background: linear-gradient(0deg, rgba(255, 108, 61, 0.20) 0%, rgba(0, 0, 0, 0.00) 21.96%), #1A1917; */
+
+
+        &_border {
+            overflow: hidden;
+            border-radius: 10px;
+            border: 1px solid transparent;
+            background: linear-gradient(180deg, #1A1917 0%, #262724 100%) padding-box,
+                linear-gradient(to bottom, #ffffff00 4%, #FF6C3D) border-box;
+        }
+
+        &_promo {
+            position: relative;
+
+            &_input {
+                border-radius: 6px;
+                border: 1px dashed #393330;
+                background: #2C2623;
+                font-size: 15px;
+                color: #847F7D;
+                padding: 15px 17px;
+                line-height: 1;
+
+                &:hover {
+                    border: 1px dashed #574C46;
+                    background: #39322E;
+                }
+
+                &:focus {
+                    border: 1px dashed $orange;
+                }
+            }
+
+            &_btn {
+                color: #847F7D;
+                position: absolute;
+                right: 17px;
+                top: 50%;
+                transform: translateY(-50%);
+                font-size: 12px;
+                transition: 300ms ease;
+
+                &:hover {
+                    color: $orange;
+                }
+            }
+        }
+
+        &_info {
+            width: 100%;
+            /* height: 220px; */
+        }
     }
 }
