--- a/src/assets/scss/pages/_basket.scss
+++ b/src/assets/scss/pages/_basket.scss
@@ -446,8 +446,67 @@
         }
 
         &_info {
+            margin-top: 20px;
             width: 100%;
-            /* height: 220px; */
+            position: relative;
+
+            &_block {
+                position: absolute;
+                width: calc(100% - 40px);
+                left: 20px;
+                top: 20px;
+                display: flex;
+                flex-direction: column;
+                gap: 8px;
+            }
+
+            &_table {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                line-height: 1;
+
+                &._main {
+                    margin-bottom: 12px;
+                }
+
+                &._bonus {
+                    border-radius: 6px;
+                    border: 1px dashed #393330;
+                    padding: 10px 13px;
+                    margin-top: 10px;
+                }
+            }
+
+            &_title {
+                color: $text-dark;
+                font-size: 15px;
+
+                &._title {
+                    font-size: 20px;
+                    font-weight: 700;
+                    color: white;
+                }
+            }
+
+            &_value {
+                color: #A8644E;
+                font-size: 15px;
+
+                &._value {
+                    font-size: 20px;
+                    font-weight: 600;
+                    color: $orange;
+                }
+
+                &._percent {
+                    color: #46B852;
+                }
+
+                &._bonus_value {
+                    color: $text-dark;
+                }
+            }
         }
     }
 }
