--- a/src/assets/scss/pages/_basket.scss
+++ b/src/assets/scss/pages/_basket.scss
@@ -395,9 +395,7 @@
 
     &__price {
         width: 100%;
-        padding: 20px;
-
-        /* background: linear-gradient(0deg, rgba(255, 108, 61, 0.20) 0%, rgba(0, 0, 0, 0.00) 21.96%), #1A1917; */
+        padding: 20px 20px 30px;
 
 
         &_border {
@@ -507,6 +505,137 @@
                     color: $text-dark;
                 }
             }
+        }
+
+        &_contract {
+            border-radius: 6px;
+            border: 1px dashed #393330;
+            background: #1E1C19;
+            padding: 10px 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        &_btn {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            background: #191917;
+            padding: 10px 15px;
+            color: $text-dark;
+            font-size: 20px;
+            transition: 300ms ease;
+
+            &_border {
+                padding: 0;
+                margin-top: 20px;
+                border-radius: 10px;
+                border: 1px solid transparent;
+                background: linear-gradient(180deg, #1A1917 0%, #262724 100%) padding-box,
+                    linear-gradient(to bottom, #ffffff00 4%, #FF6C3D) border-box;
+                width: 100%;
+                display: flex;
+                overflow: hidden;
+                transition: 300ms ease;
+
+                svg path {
+                    transition: 300ms ease;
+                }
+
+                &:hover {
+                    border: 1px solid $orange;
+
+                    .basket-page__price_btn {
+                        color: white;
+                    }
+
+                    svg path {
+                        fill: $orange;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.contract-offer {
+    font-size: 12px;
+
+    &__text {
+        color: $text-dark;
+    }
+
+    &__link {
+        color: $orange;
+    }
+
+    &__switch {
+        position: relative;
+        display: inline-block;
+        width: 50px;
+        height: 20px;
+        margin: 0;
+    }
+
+    &__input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+    }
+
+    &__slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: transparent;
+        transition: .4s;
+        border: 1px solid #393330;
+        border-radius: 6px;
+        overflow: hidden;
+
+        &:hover {
+            border: 1px solid $text-dark;
+        }
+
+        &:before {
+            position: absolute;
+            content: "";
+            width: 24px;
+            height: 18px;
+            left: 0;
+            bottom: 0;
+            background-color: $text-dark;
+            transition: .4s;
+            border-radius: 5px;
+        }
+
+
+        input:checked+& {
+            &:hover {
+                border: 1px solid $orange;
+            }
+        }
+
+        input:checked+&:before {
+            transform: translateX(24px);
+            background: linear-gradient(270deg, #FF6C3D -1.92%, #994125 100%);
+        }
+    }
+
+    &:hover {
+
+
+        .contract-offer__text {
+            color: white;
+        }
+
+        .contract-offer__link {
+            border-bottom: 1px solid $orange;
         }
     }
 }
