--- a/src/assets/scss/pages/_basket.scss
+++ b/src/assets/scss/pages/_basket.scss
@@ -11,10 +11,21 @@
         align-items: center;
         justify-content: space-between;
 
+        @include mobile{
+            flex-direction: column;
+            gap: 20px;
+        }
+
         &_info {
             display: flex;
             align-items: center;
             gap: 55px;
+
+            @include mobile{
+                justify-content: space-between;
+                gap: 20px;
+                width: 100%;
+            }
         }
 
         &_svg {
@@ -60,6 +71,10 @@
         justify-content: space-between;
         gap: 20px;
         margin-top: 20px;
+
+        @include mobile {
+            flex-direction: column;
+        }
     }
 
     &__items {
@@ -68,6 +83,10 @@
         display: flex;
         flex-direction: column;
         gap: 15px;
+
+        @include mobile{
+            max-width: 100%;
+        }
     }
 
     &__card {
@@ -93,11 +112,19 @@
             max-width: 184px;
             display: flex;
 
+            @include mobile {
+                max-width: 108px;
+            }
+
             &_item {
                 object-fit: cover;
                 border-radius: 10px;
                 width: 184px;
                 height: 108px;
+
+                @include mobile {
+                    max-width: 108px;
+                }
             }
         }
 
@@ -105,6 +132,10 @@
             width: 100%;
             display: flex;
             gap: 10px;
+
+            @include netbook {
+                flex-direction: column;
+            }
         }
 
         &_info {
@@ -115,13 +146,16 @@
         &_title {
             font-size: 24px;
             font-weight: 700;
+
+            @include netbook {
+                font-size: 20px;
+            }
         }
 
         &_subtitle {
             font-size: 12px;
             font-weight: 400;
             color: $text-dark;
-            line-height: 1;
         }
 
         &_tags {
@@ -130,6 +164,10 @@
             gap: 30px;
             flex-wrap: wrap;
             margin-top: 18px;
+
+            @include netbook {
+                margin-top: 10px;
+            }
         }
 
         &_tag {
@@ -154,6 +192,11 @@
             align-items: flex-end;
             justify-content: space-between;
             gap: 10px;
+
+            @include netbook {
+                flex-direction: row;
+                align-items: center;
+            }
         }
 
         &_action {
@@ -391,6 +434,10 @@
         display: flex;
         flex-direction: column;
         gap: 50px;
+
+        @include mobile{
+            max-width: 100%;
+        }
     }
 
     &__price {
