--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -624,10 +624,10 @@
     position: relative;
     overflow: hidden;
     border: 1px solid transparent;
+    transition: 300ms ease;
 
     &:hover {
         border: 1px solid $orange;
-        background: linear-gradient(91deg, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0.17) 63.74%, rgba(0, 0, 0, 0.35) 101.17%);
     }
 
     @include mobile {
@@ -1141,5 +1141,46 @@
         border: 1px solid $orange;
         background: #1A1917;
         padding: 12px;
+    }
+}
+
+.price-universal {
+    display: flex;
+    flex-direction: column;
+
+    &__new {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        font-size: 22px;
+        color: $orange;
+        font-weight: 700;
+        line-height: 1;
+        margin-bottom: 5px;
+
+
+        &_icon {
+            position: relative;
+            top: -1px;
+        }
+    }
+
+    &__old {
+        font-size: 12px;
+        color: white;
+        display: flex;
+        align-items: center;
+        gap: 3px;
+
+        &_price {
+            display: flex;
+            align-items: center;
+            gap: 2px;
+        }
+
+        &_icon {
+            position: relative;
+            top: -1px;
+        }
     }
 }
