--- a/src/assets/scss/pages/_catalog.scss
+++ b/src/assets/scss/pages/_catalog.scss
@@ -206,7 +206,7 @@
 
         &_cards {
             display: grid;
-            gap: 20px;
+            gap: 10px;
             height: 460px;
             grid-template-columns: 1fr;
             grid-template-rows: 1fr 1fr;
@@ -224,7 +224,7 @@
         &_slider {
             display: flex;
             justify-content: space-between;
-            gap: 20px;
+            gap: 10px;
             width: 100%;
 
             .swiper {
@@ -235,7 +235,7 @@
             .swiper-slide {
                 display: flex;
                 justify-content: space-between;
-                gap: 20px;
+                gap: 10px;
             }
 
 
@@ -277,15 +277,53 @@
             display: flex;
             border-radius: 20px;
             overflow: hidden;
-            border: 2px solid transparent;
+            position: relative;
 
             &:hover {
-                border: 2px solid $orange;
+                .catalog-slider__sold_overlay {
+                    visibility: visible;
+                    opacity: 1;
+                }
             }
         }
 
         &_img {
             object-fit: cover;
+        }
+
+        &_overlay {
+            background: linear-gradient(180deg, rgba(32, 28, 26, 0.82) 0%, rgba(45, 40, 36, 0.82) 100%);
+            backdrop-filter: blur(11.300000190734863px);
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: fit-content;
+            height: -webkit-fill-available;
+            padding: 10px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            visibility: hidden;
+            opacity: 0;
+            transition: 300ms ease;
+        }
+
+        &_title {
+            font-size: 15px;
+            color: white;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            line-height: 1.2;
+            font-family: $font-roboto;
+        }
+
+        &_icon {
+            display: flex;
+            justify-content: center;
+            margin: 10px 0;
         }
 
         .swiper-horizontal>.swiper-pagination-bullets,
