--- a/src/assets/scss/common/_buttons.scss
+++ b/src/assets/scss/common/_buttons.scss
@@ -33,9 +33,10 @@
 .more-btn {
     font-size: 16px;
     font-weight: 400;
-    padding: 14px 45px;
+    padding: 14px 35px;
     border-radius: 9px;
     border: 1px solid $text-dark;
+    line-height: 1;
 
     &:hover {
         color: white;
