--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -1004,16 +1004,6 @@
         align-items: center;
     }
 
-    /* &-item {
-        &:first-child {
-            margin-right: 10px;
-        }
-
-        &:last-child {
-            margin-left: 10px;
-        }
-    } */
-
     &-link {
         font-size: 24px;
         color: $text-dark;
@@ -1070,9 +1060,23 @@
 /* New Card */
 .new-card {
     position: relative;
+    width: 234px;
 
-    &__bg {
+    &__overlay {
+        position: absolute;
+        top: 1px;
+        left: 1px;
+        width: 232px;
+        height: 371px;
+        z-index: 2;
+        display: flex;
+        flex-direction: column;
+    }
 
+    &__svg {}
+
+    /* &__bg {
+        position: relative;
         display: flex;
         flex-direction: column;
         overflow: hidden;
@@ -1087,22 +1091,34 @@
         &:hover {
             border-color: $orange;
         }
-    }
+
+        &::after {
+            content: "";
+            width: 100px;
+            height: 1px;
+            background-color: $orange;
+            position: absolute;
+            bottom: 0;
+            right: -1px;
+            transform: rotate(-45deg);
+        }
+    } */
 
     &__img {
         display: flex;
-        background-color: $orange;
+        border-bottom: 2px solid $orange;
 
         &_item {
             height: 258px;
             object-fit: cover;
+            border-radius: 6px 6px 0 0;
         }
     }
 
     &__content {
         height: 100%;
-        background-color: $dark;
         padding: 10px;
+        border-top: 2px solid #11100F;
     }
 
     &__title {
@@ -1144,12 +1160,24 @@
 
     &__btn {
         position: absolute;
-        bottom: 0;
-        right: 0;
+        bottom: 6px;
+        right: 5px;
         border-radius: 13px 0px;
         border: 1px solid $orange;
         background: #1A1917;
         padding: 12px;
+    }
+
+    &:hover {
+        .new-card__svg path {
+            stroke: $orange;
+        }
+
+        .new-card__svg {
+            filter: drop-shadow(0px 4px 20.8px rgba(255, 108, 61, 0.34));
+        }
+
+
     }
 }
 
