--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -634,6 +634,12 @@
     &__title {
         font-size: 14px;
     }
+
+    .swiper-slide {
+        width: auto;
+        display: flex;
+        justify-content: center;
+    }
 }
 
 /* Loop Block */
