--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -635,11 +635,15 @@
         font-size: 14px;
     }
 
-    .swiper-slide {
+    .splide__track {
+        overflow: visible;
+    }
+
+    /* .swiper-slide {
         width: auto;
         display: flex;
         justify-content: center;
-    }
+    } */
 }
 
 /* Loop Block */
