--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -1073,7 +1073,11 @@
         flex-direction: column;
     }
 
-    &__svg {}
+    &__svg {
+        transition: 300ms ease;
+
+        path {}
+    }
 
     &__discount {
         display: flex;
@@ -1218,10 +1222,11 @@
     &:hover {
         .new-card__svg path {
             stroke: $orange;
+            transition: 300ms ease;
         }
 
         .new-card__svg {
-            filter: drop-shadow(0px 4px 20.8px rgba(255, 108, 61, 0.34));
+            filter: drop-shadow(0px 4px 8px rgba(255, 108, 61, 0.34));
         }
 
 
