--- a/src/assets/scss/_template.scss
+++ b/src/assets/scss/_template.scss
@@ -31,6 +31,10 @@ a {
     }
 }
 
+svg path {
+    transition: 200ms ease;
+}
+
 button {
     font-family: $font-inter;
     background-color: transparent;
