--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -1208,13 +1208,88 @@
     }
 
     &__btn {
-        position: absolute;
-        bottom: 6px;
-        right: 5px;
         border-radius: 13px 0px;
         border: 1px solid $orange;
         background: #1A1917;
         padding: 12px;
+        position: relative;
+        z-index: 2;
+
+        &:focus {
+            border: 1px solid $orange;
+        }
+
+        &_block {
+            position: absolute;
+            bottom: 6px;
+            right: 5px;
+
+            &._active {
+                .new-card__btn_overlay {
+                    opacity: 1;
+                    visibility: visible;
+                }
+
+                .new-card__btn {
+                    background-color: $orange;
+
+                    svg path {
+                        fill: white;
+                    }
+                }
+            }
+        }
+
+        &_overlay {
+            position: absolute;
+            width: fit-content;
+            left: -170px;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 200px;
+            border-radius: 3.754px 0px 13px 3.754px;
+            background: rgba(255, 108, 61, 0.48);
+            backdrop-filter: blur(4.880000114440918px);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 5px 40px 5px 5px;
+            opacity: 0;
+            visibility: hidden;
+        }
+
+        &_link {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            width: max-content;
+            font-size: 10px;
+            border-radius: 4px;
+            padding: 5px 10px;
+            color: #FFC6B4;
+
+            &:hover {
+                color: white;
+                backdrop-filter: blur(4.880000114440918px);
+                background: rgba(255, 108, 61, 0.48);
+
+                svg path {
+                    fill: white;
+                }
+            }
+        }
+
+        &_icon {
+            display: none;
+            opacity: 0;
+            visibility: hidden;
+        }
+
+        svg path {
+            transition: 200ms ease;
+        }
+
+        &:hover {}
     }
 
     &:hover {
@@ -1227,6 +1302,9 @@
             filter: drop-shadow(0px 4px 8px rgba(255, 108, 61, 0.34));
         }
 
+        .new-card__btn svg path {
+            fill: $orange;
+        }
 
     }
 }
