--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -700,6 +700,7 @@
 
         @include mobile {
             padding: 8px;
+            display: flex;
         }
 
         &_content {
@@ -743,11 +744,6 @@
         align-items: center;
         justify-content: center;
 
-        &_name {
-            grid-column-start: 0;
-            grid-column-end: 2;
-        }
-
         @include mobile {
             max-width: 100%;
         }
@@ -769,6 +765,15 @@
             @include netbook {
                 padding: 8px;
             }
+
+            @include mobile {
+                flex-direction: row;
+                gap: 15px;
+                background: linear-gradient(270deg, rgba(79, 79, 79, 0.35) 0%, rgba(72, 60, 54, 0.35) 31.28%, rgba(70, 66, 63, 0.35) 48.78%, rgba(72, 60, 54, 0.35) 70.71%, rgba(79, 79, 79, 0.35) 100%);
+                border-radius: 8px;
+                padding: 12px;
+                margin: 5px 20px;
+            }
         }
 
         &_img {
@@ -776,6 +781,7 @@
             object-fit: contain;
 
             @include mobile {
+                width: auto;
                 height: 25px;
             }
         }
@@ -792,6 +798,23 @@
 
         &.active .catalog__tab_block {
             filter: brightness(230%);
+        }
+
+        &_name {
+            grid-column-start: 1;
+            grid-column-end: 2;
+
+            @include mobile {
+                max-width: 100px;
+
+                .catalog__tab_block {
+                    flex-direction: column;
+                    background: none;
+                    margin: 0;
+                    padding: 8px;
+                    gap: 4px;
+                }
+            }
         }
 
         @include netbook {
@@ -846,7 +869,7 @@
         width: 100%;
         height: 101vh;
         z-index: 11;
-        background-color: #00000050;
+        background-color: #00000099;
 
         &.active {
             top: 0;
