--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -531,7 +531,7 @@
         gap: 20px;
     }
 
-    &__title {
+    /* &__title {
         color: $text-dark;
         font-size: 20px;
         margin-bottom: 35px;
@@ -829,7 +829,7 @@
                 }
             }
         }
-    }
+    } */
 
 
 }
