--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -309,7 +309,7 @@
 <div class="js-hamburger-menu logo-menu">
     <div class="container">
         <div class="logo-menu__block">
-            <div class="logo-menu__payment">
+            <!-- <div class="logo-menu__payment">
                 <div class="logo-menu__title">GameBis - Поможет!</div>
                 <div class="logo-menu__payment_cards">
                     <div class="logo-menu__payment_card _steam">
@@ -426,7 +426,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
